--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <h1>Saransh Prasad Bari</h1>
                 <h1>A Software &amp; Web Developer</h1>
                 <div id="social-links">
-                    <a href="https://www.linkedin.com/in/saranshprasadbari/"><i class="fa-brands fa-linkedin" style="color: blue;"></i></a>
-                    <a href="https://github.com/SaranshPrasad"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.hackerrank.com/profile/saranshprasad08"><i class="fa-brands fa-hackerrank" style="color: rgb(15, 60, 15);"></i></a>
-                    <a href="https://www.instagram.com/___saransh.__/"><i class="fa-brands fa-instagram" style="color: rgb(254, 56, 56);"></i></a>
+                    <a href="https://www.linkedin.com/in/saranshprasadbari/" target="_blank"><i class="fa-brands fa-linkedin" style="color: blue;"></i></a>
+                    <a href="https://github.com/SaranshPrasad" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.hackerrank.com/profile/saranshprasad08" target="_blank"><i class="fa-brands fa-hackerrank" style="color: rgb(15, 60, 15);"></i></a>
+                    <a href="https://www.instagram.com/___saransh.__/" target="_blank"><i class="fa-brands fa-instagram" style="color: rgb(254, 56, 56);"></i></a>
                 </div>
             </div>
             <hr>
@@ -49,26 +49,26 @@
           <div class="dialogue block" id="dialogue-2">
             <h2>Flasky Forecast</h2>
             <p>Step into the world of Flasky Forecast, your ultimate companion for all things weather-related. Powered by Flask and Python, this web app brings you accurate and up-to-date weather forecasts with ease. Say goodbye to unpredictable weather woes as Flasky Forecast keeps you informed, rain or shine. Whether you're planning a weekend getaway or simply want to stay prepared, trust Flasky Forecast to be your sunny sidekick, guiding you through every forecast with precision and reliability.</p>
-            <a href="#" target="_blank">What's about your day 👻</a>
+            <a href="https://mausam-09.onrender.com/" target="_blank">What's about your day 👻</a>
           </div>
         
 
           <div class="dialogue block" id="dialogue-3">
             <h2>ock, Paper, Scissors Showdown</h2>
             <p>Dive into the timeless fun of Rock, Paper, Scissors Showdown! This modern twist on a beloved classic pits you against the computer in a battle of wits and strategy. With sleek HTML, CSS, and JavaScript design, experience the excitement of this age-old game like never before. Are you ready to rock, paper, or scissors your way to victory?</p>
-            <a href="#">Can you win 👻 ?</a>
+            <a href="https://saranshprasad.github.io/RockPaperScissors/" target="_blank">Can you win 👻 ?</a>
           </div>
 
           <div class="dialogue block" id="dialogue-4">
             <h2>Toe-Tapping Tactics</h2>
             <p>Get ready for some toe-tapping fun with Tic-Tac-Toe! Dive into this classic game reimagined with HTML, CSS, and JavaScript. Test your strategic prowess against the computer or challenge a friend in a battle for tic-tac-toe supremacy. With sleek design and addictive gameplay, Toe-Tapping Tactics will keep you entertained for hours. Are you ready to make your mark?</p>
-            <a href="#">Let's show how you trap 😊</a>
+            <a href="https://saranshprasad.github.io/TikTacToe/"  target="_blank">Let's show how you trap 😊</a>
           </div>
 
           <div class="dialogue block" id="dialogue-5">
             <h2>Flasky Bloggy</h2>
             <p>Introducing Flasky Bloggy, your all-in-one destination for unleashing your inner wordsmith! Powered by Flask and Python, this intuitive web app empowers you to create and share captivating blog posts with ease. With seamless HTML, CSS, and JavaScript integration, express yourself like never before. Whether you're a seasoned blogger or just starting out, Flasky Bloggy makes crafting compelling content a breeze. Start your blogging journey today!</p>
-            <a href="#">Blogs are waiting 🧑‍💻</a>
+            <a href="https://syntax-safari-09.onrender.com/" target="_blank">Blogs are waiting 🧑‍💻</a>
           </div>
 
 
